Added files updated
Final release for the project

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <li><a href="pages/hawaii.html">Hawaii</a></li>
                 <li><a href="pages/iceland.html">Iceland</a></li>
                 <li><a href="pages/greece.html">Greece</a></li>
+                <li><a href="/pages/getstarted.html">Get Started</a>
             </ul>
         </nav>
     </header>
@@ -23,8 +24,8 @@
         <div class="banner-text-container">
             <h2 class="banner-heading">Travelling Comes With Endless Discoveries</h2>
             <p class="banner-text">
-                Don't let your dreams be just dreams. Experience the world by booking a<br>
-                vacation with us now.
+                Don't let your dreams be just dreams. Experience the world by booking
+                <br>vacation with us now.
             </p>
             <button class="get-started-btn" type="button" onclick="location.href='pages/getstarted.html'">
                 Get Started
