--- a/pages/hawaii.html
+++ b/pages/hawaii.html
@@ -15,6 +15,7 @@
                 <li><a href="/pages/hawaii.html" class="active">Hawaii</a></li>
                 <li><a href="/pages/iceland.html">Iceland</a></li>
                 <li><a href="/pages/greece.html">Greece</a></li>
+                <li><a href="/pages/getstarted.html">Get Started</a>
             </ul>
         </nav>
     </header>
